--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
 /* Global Styles */
+
 :root {
-  --primary-color: #4d58ff;
+  --danger-color: #dc3545;
   --dark-color: #333333;
   --light-color: #f4f4f4;
-  --danger-color: #dc3545;
+  --medium-color: #a0a0a0;
+  --primary-color: #4d58ff;
   --success-color: #28a745;
+  --slow-transition: 1s;
+  --medium-transition: 0.5s;
+  --fast-transition: 0.2s;
 }
 
 * {
@@ -16,11 +20,11 @@
 }
 
 body {
+  background-color: #fff;
+  color: #333;
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
-  color: #333;
 }
 
 a {
@@ -41,14 +45,17 @@ img {
 }
 
 /* Utilities */
+
 .container {
-  max-width: 1100px;
   margin: auto;
+  max-width: 1100px;
+  min-height: 500px;
   overflow: hidden;
   padding: 0 2rem;
 }
 
 /* Text Styles*/
+
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
@@ -99,24 +106,51 @@ img {
 }
 
 /* Center All */
+
 .all-center {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  margin: auto;
   justify-content: center;
-  align-items: center;
+  margin: auto;
   text-align: center;
+  width: 100%;
 }
 
 /* Cards */
+
 .card {
-  padding: 1rem;
-  border: #ccc 1px dotted;
+  background-color: #fff;
+  border: #ccc 1px solid;
+  border-radius: 4px;
   margin: 0.7rem 0;
+  padding: 1rem;
+  transition: background-color var(--fast-transition);
+}
+
+.card:hover {
+  background-color: var(--light-color);
+  transition: background-color var(--fast-transition);
+}
+
+.card img {
+  width: 60px;
+  transition: width var(--fast-transition);
+}
+
+.card-img-effect img {
+  width: 60px;
+  border-radius: 50%;
+  transition: width var(--fast-transition);
+}
+
+.card-img-effect:hover img{
+  border-radius: 10%;
+  transition: border-radius var(--fast-transition);
 }
 
 /* List */
+
 .list {
   margin: 0.5rem 0;
 }
@@ -126,93 +160,110 @@ img {
 }
 
 /* Padding */
+
 .p {
   padding: 0.5rem;
 }
+
 .p-1 {
   padding: 1rem;
 }
+
 .p-2 {
   padding: 2rem;
 }
+
 .p-3 {
   padding: 3rem;
 }
+
 .py {
   padding: 0.5rem 0;
 }
+
 .py-1 {
   padding: 1rem 0;
 }
+
 .py-2 {
   padding: 2rem 0;
 }
+
 .py-3 {
   padding: 3rem 0;
 }
 
 /* Margin */
+
 .m {
   margin: 0.5rem;
 }
+
 .m-1 {
   margin: 1rem;
 }
+
 .m-2 {
   margin: 2rem;
 }
+
 .m-3 {
   margin: 3rem;
 }
+
 .my {
   margin: 0.5rem 0;
 }
+
 .my-1 {
   margin: 1rem 0;
 }
+
 .my-2 {
   margin: 2rem 0;
 }
+
 .my-3 {
   margin: 3rem 0;
 }
 
 /* Grid */
+
 .grid-2 {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .grid-3 {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .grid-4 {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .btn {
-  display: inline-block;
   background: var(--light-color);
-  color: #333;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
   border: none;
+  color: #333;
   cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
   margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
   outline: none;
+  padding: 0.4rem 1.3rem;
+  transition: opacity 0.2s ease-in;
 }
 
 .btn-link {
   background: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 .btn-block {
@@ -222,84 +273,72 @@ img {
 
 .btn-sm {
   font-size: 0.8rem;
-  padding: 0.3rem 1rem;
   margin-right: 0.2rem;
+  padding: 0.3rem 1rem;
 }
 
 .badge {
+  background: var(--light-color);
+  border-radius: 5px;
+  color: #333;
   display: inline-block;
   font-size: 0.8rem;
+  margin: 0.3rem;
   padding: 0.2rem 0.7rem;
   text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
-  border-radius: 5px;
 }
 
 .alert {
-  padding: 0.7rem;
+  background: var(--light-color);
+  color: #333;
   margin: 1rem 0;
   opacity: 0.9;
-  background: var(--light-color);
-  color: #333;
+  padding: 0.7rem;
 }
 
-.btn-primary,
-.bg-primary,
-.badge-primary,
-.alert-primary {
+.btn-primary, .bg-primary, .badge-primary, .alert-primary {
   background: var(--primary-color);
   color: #fff;
+  transition: color var(--medium-transition);
 }
 
-.btn-light,
-.bg-light,
-.badge-light,
-.alert-light {
+.btn-light, .bg-light, .badge-light, .alert-light {
   background: var(--light-color);
   color: #333;
+  transition: color var(--medium-transition);
 }
 
-.btn-dark,
-.bg-dark,
-.badge-dark,
-.alert-dark {
+.btn-dark, .bg-dark, .badge-dark, .alert-dark {
   background: var(--dark-color);
   color: #fff;
+  transition: color var(--medium-transition);
 }
 
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
+.btn-danger, .bg-danger, .badge-danger, .alert-danger {
   background: var(--danger-color);
   color: #fff;
+  transition: color var(--medium-transition);
 }
 
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
+.btn-success, .bg-success, .badge-success, .alert-success {
   background: var(--success-color);
   color: #fff;
+  transition: color var(--medium-transition);
 }
 
-.btn-white,
-.bg-white,
-.badge-white,
-.alert-white {
+.btn-white, .bg-white, .badge-white, .alert-white {
   background: #fff;
   color: #333;
   border: #ccc solid 1px;
+  transition: color var(--medium-transition);
 }
 
 .btn:hover {
   opacity: 0.8;
+  transition: opacity var(--medium-transition);
 }
 
-.bg-light,
-.badge-light {
+.bg-light, .badge-light {
   border: #ccc solid 1px;
 }
 
@@ -307,37 +346,41 @@ img {
   border-radius: 50%;
 }
 
+.round-img-effect {
+  border-radius: 50%;
+  transition: border-radius var(--medium-transition);
+}
+
+.round-img-effect:hover {
+  border-radius: 10%;
+  transition: border-radius var(--medium-transition);
+}
+
 /* Forms */
+
 input {
   margin: 1.2rem 0;
 }
 
 .form-text {
+  color: #888;
   display: block;
   margin-top: 0.3rem;
-  color: #888;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
-select,
-textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
+input[type='text'], input[type='email'], input[type='password'], input[type='date'], select, textarea {
   border: 1px solid #ccc;
+  display: block;
+  font-size: 1.2rem;
+  padding: 0.4rem;
+  width: 100%;
 }
 
-input[type='submit'],
-button {
+input[type='submit'], button {
   font: inherit;
 }
 
-table th,
-table td {
+table th, table td {
   padding: 1rem;
   text-align: left;
 }
@@ -347,15 +390,38 @@ table th {
 }
 
 /* Navbar */
+
+.navbar-spacer {
+  height: 50px;
+  margin-bottom: 10px;
+  position: relative;
+  opacity: 0;
+  width: 100%;
+}
+
+.nav-rel {
+  position: relative;
+}
+
+.nav-fixed {
+  position: fixed;
+}
+
 .navbar {
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  height: 50px;
+  opacity: 0.8;
   padding: 0.7rem 2rem;
-  z-index: 1;
+  transition: opacity var(--medium-transition);
   width: 100%;
-  opacity: 0.9;
-  margin-bottom: 1rem;
+  z-index: 1;
+}
+
+.navbar:hover {
+  opacity: 1;
+  transition: opacity var(--medium-transition);
 }
 
 .navbar ul {
@@ -364,8 +430,8 @@ table th {
 
 .navbar a {
   color: #fff;
-  padding: 0.45rem;
   margin: 0 0.25rem;
+  padding: 0.45rem;
 }
 
 .navbar a:hover {
@@ -376,37 +442,40 @@ table th {
   margin-right: 0.6rem;
 }
 
+.footer {
+  background-color: var(--medium-color);
+  color: #fff;
+  margin-top: 100px;
+  min-height: 200px;
+  padding: 0.7rem 2rem;
+  width: 100%;
+  z-index: 1;
+}
+
 /* Mobile Styles */
+
 @media (max-width: 700px) {
   .hide-sm {
     display: none;
   }
-
-  .grid-2,
-  .grid-3,
-  .grid-4 {
+  .grid-2, .grid-3, .grid-4 {
     grid-template-columns: 1fr;
   }
-
   /* Text Styles */
   .x-large {
     font-size: 3rem;
   }
-
   .large {
     font-size: 2rem;
   }
-
   .lead {
     font-size: 1rem;
   }
-
   /* Navbar */
   .navbar {
     display: block;
     text-align: center;
   }
-
   .navbar ul {
     text-align: center;
     justify-content: center;
